// общие структуры

syntax = "proto3";

package common;

message Empty {}

message GraphPartResponse {
  int64 task_id = 1;
  int32 response_id = 2;
  ParseStatus status = 3;
  // Тип ответа. Первый ответ всегда = 3, второй ответ всегда = 4, третий и последующие всегда = 5
  oneof graph_part_type {
    GraphPartRequirements graph_requirements = 4;
    GraphPartEndpoints graph_endpoints = 5;
    GraphPartArchitecture graph_architecture = 6;
  }
}

message GraphPartRequirements {
  uint32 total = 1;
  repeated string requirements = 2;
}

message GraphPartEndpoints {
  uint32 total = 1;
  map<string, string> endpoints = 2; // Эндпоинты в формате: "название: адрес"
}

message GraphPartArchitecture {
  string parent = 1;
  repeated string children = 2;
}

enum ParseStatus {
  // Этапы парсинга
  START = 0;
  REQUIREMENTS = 1;
  ENDPOINTS = 2;
  ARHITECTURE = 3;
  DONE = 4;
}