/**
 * ğŸ” ĞŸĞĞ›ĞĞĞ¯ Ğ”Ğ˜ĞĞ“ĞĞĞ¡Ğ¢Ğ˜ĞšĞ gRPC ĞŸĞĞ”ĞšĞ›Ğ®Ğ§Ğ•ĞĞ˜Ğ¯
 * 
 * Ğ­Ñ‚Ğ¾Ñ‚ ÑĞºÑ€Ğ¸Ğ¿Ñ‚ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ÑĞµÑ‚ Ğ’Ğ¡Ğ• ÑƒÑ€Ğ¾Ğ²Ğ½Ğ¸ Ğ¿Ğ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½Ğ¸Ñ:
 * 1. REST API Ğ´Ğ¾ÑÑ‚ÑƒĞ¿Ğ½Ğ¾ÑÑ‚ÑŒ (8000)
 * 2. Envoy proxy Ğ´Ğ¾ÑÑ‚ÑƒĞ¿Ğ½Ğ¾ÑÑ‚ÑŒ (8080)
 * 3. gRPC-Web endpoint
 * 4. Ğ¤Ğ¾Ñ€Ğ¼Ğ°Ñ‚ Ğ·Ğ°Ğ¿Ñ€Ğ¾ÑĞ°
 * 5. Ğ¤Ğ¾Ñ€Ğ¼Ğ°Ñ‚ Ğ¾Ñ‚Ğ²ĞµÑ‚Ğ°
 * 
 * Ğ˜Ğ¡ĞŸĞĞ›Ğ¬Ğ—ĞĞ’ĞĞĞ˜Ğ•:
 * 1. npm run dev
 * 2. ĞÑ‚ĞºÑ€Ñ‹Ñ‚ÑŒ http://localhost:5173
 * 3. F12 â†’ Console
 * 4. Ğ¡ĞºĞ¾Ğ¿Ğ¸Ñ€Ğ¾Ğ²Ğ°Ñ‚ÑŒ Ğ²ĞµÑÑŒ ÑÑ‚Ğ¾Ñ‚ Ñ„Ğ°Ğ¹Ğ» Ğ¸ Ğ²ÑÑ‚Ğ°Ğ²Ğ¸Ñ‚ÑŒ Ğ² Console
 * 5. diagnoseGrpc(userId, projectId)
 * 
 * ĞŸĞ Ğ˜ĞœĞ•Ğ :
 * diagnoseGrpc(9, 242)
 */

async function diagnoseGrpc(userId, projectId) {
  console.clear();
  console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•');
  console.log('ğŸ” Ğ”Ğ˜ĞĞ“ĞĞĞ¡Ğ¢Ğ˜ĞšĞ gRPC ĞŸĞĞ”ĞšĞ›Ğ®Ğ§Ğ•ĞĞ˜Ğ¯');
  console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•');
  console.log(`ğŸ‘¤ User ID: ${userId}`);
  console.log(`ğŸ“‹ Project ID: ${projectId}`);
  console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n');
  
  const results = {
    restApi: null,
    envoyProxy: null,
    grpcEndpoint: null,
    streamConnection: null
  };
  
  // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
  // Ğ¢Ğ•Ğ¡Ğ¢ 1: REST API (FastAPI Ğ½Ğ° Ğ¿Ğ¾Ñ€Ñ‚Ñƒ 8000)
  // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
  console.log('â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”');
  console.log('â”‚ Ğ¢Ğ•Ğ¡Ğ¢ 1: REST API (FastAPI)                             â”‚');
  console.log('â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜');
  
  try {
    // ĞŸÑ€Ğ¾Ğ±ÑƒĞµĞ¼ Ğ¾Ğ±Ğ° Ğ²Ğ°Ñ€Ğ¸Ğ°Ğ½Ñ‚Ğ°: /v1/health Ğ¸ /health
    let restResponse = await fetch('/v1/health', {
      method: 'GET'
    });
    
    // Ğ•ÑĞ»Ğ¸ 404, Ğ¿Ñ€Ğ¾Ğ±ÑƒĞµĞ¼ Ğ±ĞµĞ· /v1 prefix
    if (restResponse.status === 404) {
      restResponse = await fetch('/health', {
        method: 'GET'
      });
    }
    
    results.restApi = {
      status: restResponse.status,
      ok: restResponse.ok,
      headers: Object.fromEntries(restResponse.headers.entries())
    };
    
    if (restResponse.ok) {
      console.log('âœ… REST API Ñ€Ğ°Ğ±Ğ¾Ñ‚Ğ°ĞµÑ‚');
      console.log('   Status:', restResponse.status);
      console.log('   URL:', '/health â†’ http://78.153.139.47:8000/health');
    } else {
      console.log('âš ï¸  REST API Ğ²ĞµÑ€Ğ½ÑƒĞ» Ğ¾ÑˆĞ¸Ğ±ĞºÑƒ');
      console.log('   Status:', restResponse.status);
    }
  } catch (error) {
    console.error('âŒ REST API Ğ½ĞµĞ´Ğ¾ÑÑ‚ÑƒĞ¿ĞµĞ½:', error.message);
    results.restApi = { error: error.message };
  }
  
  console.log('');
  
  // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
  // Ğ¢Ğ•Ğ¡Ğ¢ 2: Envoy Proxy Health (Ğ¿Ğ¾Ñ€Ñ‚ 8080)
  // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
  console.log('â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”');
  console.log('â”‚ Ğ¢Ğ•Ğ¡Ğ¢ 2: Envoy Proxy Health Check                       â”‚');
  console.log('â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜');
  
  try {
    const envoyResponse = await fetch('/grpc/health', {
      method: 'GET'
    });
    
    results.envoyProxy = {
      status: envoyResponse.status,
      ok: envoyResponse.ok,
      headers: Object.fromEntries(envoyResponse.headers.entries())
    };
    
    if (envoyResponse.status === 503) {
      console.error('âŒ ĞšĞ Ğ˜Ğ¢Ğ˜Ğ§Ğ•Ğ¡ĞšĞĞ¯ ĞĞ¨Ğ˜Ğ‘ĞšĞ: Envoy Ğ²Ğ¾Ğ·Ğ²Ñ€Ğ°Ñ‰Ğ°ĞµÑ‚ 503');
      console.error('   Ğ­Ñ‚Ğ¾ Ğ·Ğ½Ğ°Ñ‡Ğ¸Ñ‚ Ñ‡Ñ‚Ğ¾ Envoy ĞĞ• ĞœĞĞ–Ğ•Ğ¢ Ğ¿Ğ¾Ğ´ĞºĞ»ÑÑ‡Ğ¸Ñ‚ÑŒÑÑ Ğº Core gRPC service');
      console.error('   ');
      console.error('   ğŸ”§ Ğ Ğ•Ğ¨Ğ•ĞĞ˜Ğ• (Ğ´Ğ»Ñ backend ĞºĞ¾Ğ¼Ğ°Ğ½Ğ´Ñ‹):');
      console.error('   1. ĞŸÑ€Ğ¾Ğ²ĞµÑ€Ğ¸Ñ‚ÑŒ Ñ‡Ñ‚Ğ¾ Core service Ğ·Ğ°Ğ¿ÑƒÑ‰ĞµĞ½:');
      console.error('      docker ps | grep core-service');
      console.error('   ');
      console.error('   2. ĞŸÑ€Ğ¾Ğ²ĞµÑ€Ğ¸Ñ‚ÑŒ Ñ‡Ñ‚Ğ¾ Core ÑĞ»ÑƒÑˆĞ°ĞµÑ‚ Ğ¿Ğ¾Ñ€Ñ‚ 50051:');
      console.error('      docker logs core-service | grep "50051"');
      console.error('   ');
      console.error('   3. ĞŸÑ€Ğ¾Ğ²ĞµÑ€Ğ¸Ñ‚ÑŒ Envoy ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³:');
      console.error('      cat envoy.yaml | grep "core-service"');
      console.error('   ');
      console.error('   4. ĞŸÑ€Ğ¾Ğ²ĞµÑ€Ğ¸Ñ‚ÑŒ Docker network:');
      console.error('      docker network inspect <network_name>');
    } else if (envoyResponse.ok) {
      console.log('âœ… Envoy Proxy Ğ´Ğ¾ÑÑ‚ÑƒĞ¿ĞµĞ½');
      console.log('   Status:', envoyResponse.status);
    } else {
      console.log('âš ï¸  Envoy Proxy Ğ²ĞµÑ€Ğ½ÑƒĞ» Ğ½ĞµĞ¾Ğ¶Ğ¸Ğ´Ğ°Ğ½Ğ½Ñ‹Ğ¹ ÑÑ‚Ğ°Ñ‚ÑƒÑ');
      console.log('   Status:', envoyResponse.status);
    }
  } catch (error) {
    console.error('âŒ Envoy Proxy Ğ½ĞµĞ´Ğ¾ÑÑ‚ÑƒĞ¿ĞµĞ½:', error.message);
    results.envoyProxy = { error: error.message };
  }
  
  console.log('');
  
  // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
  // Ğ¢Ğ•Ğ¡Ğ¢ 3: gRPC Endpoint (ĞµÑĞ»Ğ¸ Envoy Ñ€Ğ°Ğ±Ğ¾Ñ‚Ğ°ĞµÑ‚)
  // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
  console.log('â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”');
  console.log('â”‚ Ğ¢Ğ•Ğ¡Ğ¢ 3: gRPC RunAlgorithm Endpoint                      â”‚');
  console.log('â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜');
  
  if (results.envoyProxy?.status === 503) {
    console.log('â­ï¸  ĞŸÑ€Ğ¾Ğ¿ÑƒÑĞºĞ°ĞµĞ¼ - Envoy Ğ½ĞµĞ´Ğ¾ÑÑ‚ÑƒĞ¿ĞµĞ½ (503)');
    console.log('   Ğ¡Ğ½Ğ°Ñ‡Ğ°Ğ»Ğ° Ğ½ÑƒĞ¶Ğ½Ğ¾ Ğ¿Ğ¾Ñ‡Ğ¸Ğ½Ğ¸Ñ‚ÑŒ Envoy/Core connection');
  } else {
    // ĞšĞ¾Ğ´Ğ¸Ñ€Ğ¾Ğ²Ğ°Ğ½Ğ¸Ğµ varint Ğ´Ğ»Ñ Protobuf
    function encodeVarint(value) {
      const bytes = [];
      while (value > 0x7f) {
        bytes.push((value & 0x7f) | 0x80);
        value >>>= 7;
      }
      bytes.push(value & 0x7f);
      return bytes;
    }
    
    // Ğ¡Ğ¾Ğ·Ğ´Ğ°Ñ‘Ğ¼ Protobuf Ğ·Ğ°Ğ¿Ñ€Ğ¾Ñ: AlgorithmRequest
    const requestBytes = [
      0x08, ...encodeVarint(userId),    // field 1: user_id (int64)
      0x10, ...encodeVarint(projectId)  // field 2: task_id (int64)
    ];
    
    console.log('ğŸ“¦ ĞÑ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ÑĞµĞ¼ AlgorithmRequest:');
    console.log('   user_id:', userId);
    console.log('   task_id (project_id):', projectId);
    console.log('   Payload (hex):', requestBytes.map(b => b.toString(16).padStart(2, '0')).join(' '));
    console.log('');
    
    const requestBody = new Uint8Array(requestBytes);
    
    try {
      const grpcResponse = await fetch('/grpc/core.api.FrontendStreamService/RunAlgorithm', {
        method: 'POST',
        headers: {
          'Content-Type': 'application/grpc-web+proto',
          'Accept': 'application/grpc-web+proto',
          'X-Grpc-Web': '1',
          'X-User-Agent': 'grpc-web-javascript/0.1',
        },
        body: requestBody
      });
      
      console.log('ğŸ“¥ ĞÑ‚Ğ²ĞµÑ‚ Ğ¾Ñ‚ gRPC endpoint:');
      console.log('   Status:', grpcResponse.status, grpcResponse.statusText);
      console.log('   Headers:', Object.fromEntries(grpcResponse.headers.entries()));
      console.log('');
      
      results.grpcEndpoint = {
        status: grpcResponse.status,
        ok: grpcResponse.ok,
        headers: Object.fromEntries(grpcResponse.headers.entries())
      };
      
      if (!grpcResponse.ok) {
        console.error('âŒ gRPC endpoint Ğ²ĞµÑ€Ğ½ÑƒĞ» Ğ¾ÑˆĞ¸Ğ±ĞºÑƒ:', grpcResponse.status);
        
        if (grpcResponse.status === 404) {
          console.error('   ');
          console.error('   ğŸ”§ Ğ Ğ•Ğ¨Ğ•ĞĞ˜Ğ•: ĞŸÑ€Ğ¾Ğ²ĞµÑ€Ğ¸Ñ‚ÑŒ Envoy routing config');
          console.error('   ĞŸÑƒÑ‚ÑŒ Ğ´Ğ¾Ğ»Ğ¶ĞµĞ½ Ğ±Ñ‹Ñ‚ÑŒ: /core.api.FrontendStreamService/RunAlgorithm');
        } else if (grpcResponse.status === 503) {
          console.error('   ');
          console.error('   ğŸ”§ Ğ Ğ•Ğ¨Ğ•ĞĞ˜Ğ•: Core service Ğ½Ğµ Ğ¾Ñ‚Ğ²ĞµÑ‡Ğ°ĞµÑ‚');
        }
        
        const errorText = await grpcResponse.text();
        if (errorText) {
          console.error('   Error body:', errorText);
        }
        
        console.log('');
        console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•');
        console.log('âŒ Ğ”Ğ˜ĞĞ“ĞĞĞ¡Ğ¢Ğ˜ĞšĞ Ğ—ĞĞ’Ğ•Ğ Ğ¨Ğ•ĞĞ Ğ¡ ĞĞ¨Ğ˜Ğ‘ĞšĞĞœĞ˜');
        console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•');
        return results;
      }
      
      // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
      // Ğ¢Ğ•Ğ¡Ğ¢ 4: Ğ§Ñ‚ĞµĞ½Ğ¸Ğµ Stream
      // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
      console.log('â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”');
      console.log('â”‚ Ğ¢Ğ•Ğ¡Ğ¢ 4: Ğ§Ñ‚ĞµĞ½Ğ¸Ğµ gRPC Stream                              â”‚');
      console.log('â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜');
      console.log('');
      
      const reader = grpcResponse.body.getReader();
      let buffer = new Uint8Array(0);
      let messageCount = 0;
      let lastStatus = null;
      const statusNames = ['START', 'REQUIREMENTS', 'ENDPOINTS', 'ARHITECTURE', 'DONE'];
      
      let readTimeout;
      const startTime = Date.now();
      
      try {
        while (true) {
          // Ğ¢Ğ°Ğ¹Ğ¼Ğ°ÑƒÑ‚ Ğ´Ğ»Ñ Ñ‡Ñ‚ĞµĞ½Ğ¸Ñ (30 ÑĞµĞºÑƒĞ½Ğ´)
          const readPromise = reader.read();
          const timeoutPromise = new Promise((_, reject) => {
            readTimeout = setTimeout(() => reject(new Error('Read timeout')), 30000);
          });
          
          const { done, value } = await Promise.race([readPromise, timeoutPromise]);
          clearTimeout(readTimeout);
          
          if (done) {
            console.log('');
            console.log('âœ… Stream Ğ·Ğ°Ğ²ĞµÑ€ÑˆÑ‘Ğ½');
            console.log(`   Ğ’Ñ€ĞµĞ¼Ñ Ğ²Ñ‹Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½Ğ¸Ñ: ${((Date.now() - startTime) / 1000).toFixed(2)}s`);
            break;
          }
          
          // Ğ”Ğ¾Ğ±Ğ°Ğ²Ğ»ÑĞµĞ¼ chunk Ğº Ğ±ÑƒÑ„ĞµÑ€Ñƒ
          const newBuffer = new Uint8Array(buffer.length + value.length);
          newBuffer.set(buffer);
          newBuffer.set(value, buffer.length);
          buffer = newBuffer;
          
          // ĞŸĞ°Ñ€ÑĞ¸Ğ¼ ÑĞ¾Ğ¾Ğ±Ñ‰ĞµĞ½Ğ¸Ñ Ğ¸Ğ· Ğ±ÑƒÑ„ĞµÑ€Ğ°
          while (buffer.length >= 5) {
            const compressedFlag = buffer[0];
            const messageLength = (buffer[1] << 24) | (buffer[2] << 16) | (buffer[3] << 8) | buffer[4];
            
            if (buffer.length < 5 + messageLength) {
              break; // Ğ–Ğ´Ñ‘Ğ¼ Ğ±Ğ¾Ğ»ÑŒÑˆĞµ Ğ´Ğ°Ğ½Ğ½Ñ‹Ñ…
            }
            
            const messageBytes = buffer.slice(5, 5 + messageLength);
            buffer = buffer.slice(5 + messageLength);
            
            messageCount++;
            
            // ĞŸĞ°Ñ€ÑĞ¸Ğ¼ status Ğ¸Ğ· Protobuf
            let status = null;
            let pos = 0;
            
            while (pos < messageBytes.length && pos < 20) {
              const tag = messageBytes[pos++];
              const fieldNum = tag >>> 3;
              const wireType = tag & 0x07;
              
              if (fieldNum === 3 && wireType === 0) { // field 3: status
                let statusValue = 0;
                let shift = 0;
                while (pos < messageBytes.length) {
                  const byte = messageBytes[pos++];
                  statusValue |= (byte & 0x7f) << shift;
                  if ((byte & 0x80) === 0) break;
                  shift += 7;
                }
                status = statusValue;
                lastStatus = status;
                break;
              } else {
                // ĞŸÑ€Ğ¾Ğ¿ÑƒÑĞºĞ°ĞµĞ¼ Ğ¿Ğ¾Ğ»Ğµ
                if (wireType === 0) { // varint
                  while (pos < messageBytes.length && (messageBytes[pos++] & 0x80));
                } else if (wireType === 2) { // length-delimited
                  let len = 0, shift = 0;
                  while (pos < messageBytes.length) {
                    const byte = messageBytes[pos++];
                    len |= (byte & 0x7f) << shift;
                    if ((byte & 0x80) === 0) break;
                    shift += 7;
                  }
                  pos += len;
                }
              }
            }
            
            const statusName = statusNames[status] || `Unknown(${status})`;
            const icon = status === 0 ? 'ğŸŸ¢' : status === 4 ? 'ğŸ' : 'ğŸ“¦';
            
            console.log(`${icon} Message #${messageCount}: ${statusName}`);
            console.log(`   Length: ${messageLength} bytes`);
            console.log(`   Hex: ${Array.from(messageBytes.slice(0, Math.min(30, messageBytes.length)))
              .map(b => b.toString(16).padStart(2, '0')).join(' ')}${messageBytes.length > 30 ? '...' : ''}`);
            console.log('');
          }
        }
        
        results.streamConnection = {
          success: true,
          messageCount,
          lastStatus,
          duration: Date.now() - startTime
        };
        
        console.log('');
        console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•');
        console.log('âœ… Ğ”Ğ˜ĞĞ“ĞĞĞ¡Ğ¢Ğ˜ĞšĞ Ğ£Ğ¡ĞŸĞ•Ğ¨ĞĞ Ğ—ĞĞ’Ğ•Ğ Ğ¨Ğ•ĞĞ');
        console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•');
        console.log(`ğŸ“Š ĞŸĞ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¾ ÑĞ¾Ğ¾Ğ±Ñ‰ĞµĞ½Ğ¸Ğ¹: ${messageCount}`);
        console.log(`ğŸ ĞŸĞ¾ÑĞ»ĞµĞ´Ğ½Ğ¸Ğ¹ ÑÑ‚Ğ°Ñ‚ÑƒÑ: ${statusNames[lastStatus] || lastStatus}`);
        console.log(`â±ï¸  Ğ’Ñ€ĞµĞ¼Ñ Ğ²Ñ‹Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½Ğ¸Ñ: ${(results.streamConnection.duration / 1000).toFixed(2)}s`);
        console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•');
        
        if (lastStatus !== 4) {
          console.warn('');
          console.warn('âš ï¸  Ğ’ĞĞ˜ĞœĞĞĞ˜Ğ•: Stream Ğ½Ğµ Ğ·Ğ°Ğ²ĞµÑ€ÑˆĞ¸Ğ»ÑÑ ÑÑ‚Ğ°Ñ‚ÑƒÑĞ¾Ğ¼ DONE (4)');
          console.warn('   ĞŸĞ¾ÑĞ»ĞµĞ´Ğ½Ğ¸Ğ¹ ÑÑ‚Ğ°Ñ‚ÑƒÑ:', statusNames[lastStatus]);
          console.warn('   Ğ­Ñ‚Ğ¾ Ğ¼Ğ¾Ğ¶ĞµÑ‚ Ğ¾Ğ·Ğ½Ğ°Ñ‡Ğ°Ñ‚ÑŒ Ñ‡Ñ‚Ğ¾ Ğ°Ğ½Ğ°Ğ»Ğ¸Ğ· Ğ½Ğµ Ğ·Ğ°Ğ²ĞµÑ€ÑˆĞ¸Ğ»ÑÑ Ğ¿Ğ¾Ğ»Ğ½Ğ¾ÑÑ‚ÑŒÑ');
        }
        
      } catch (streamError) {
        console.error('');
        console.error('âŒ ĞÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ñ€Ğ¸ Ñ‡Ñ‚ĞµĞ½Ğ¸Ğ¸ stream:', streamError.message);
        results.streamConnection = { error: streamError.message };
        
        if (streamError.message === 'Read timeout') {
          console.error('');
          console.error('   ğŸ”§ Ğ Ğ•Ğ¨Ğ•ĞĞ˜Ğ•: Stream Ğ½Ğµ Ğ¾Ñ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ÑĞµÑ‚ Ğ´Ğ°Ğ½Ğ½Ñ‹Ğµ > 30 ÑĞµĞºÑƒĞ½Ğ´');
          console.error('   1. ĞŸÑ€Ğ¾Ğ²ĞµÑ€Ğ¸Ñ‚ÑŒ Ñ‡Ñ‚Ğ¾ Core service Ğ¾Ğ±Ñ€Ğ°Ğ±Ğ°Ñ‚Ñ‹Ğ²Ğ°ĞµÑ‚ Ğ·Ğ°Ğ¿Ñ€Ğ¾Ñ:');
          console.error('      docker logs -f core-service | grep RunAlgorithm');
          console.error('   2. ĞŸÑ€Ğ¾Ğ²ĞµÑ€Ğ¸Ñ‚ÑŒ Ñ‡Ñ‚Ğ¾ Algorithm service Ğ·Ğ°Ğ¿ÑƒÑ‰ĞµĞ½');
          console.error('   3. ĞŸÑ€Ğ¾Ğ²ĞµÑ€Ğ¸Ñ‚ÑŒ Ğ»Ğ¾Ğ³Ğ¸ Algorithm service');
        }
      }
      
    } catch (error) {
      console.error('âŒ ĞÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ñ€Ğ¸ Ğ¿Ğ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½Ğ¸Ğ¸ Ğº gRPC endpoint:', error);
      results.grpcEndpoint = { error: error.message };
    }
  }
  
  console.log('');
  console.log('');
  console.log('â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”');
  console.log('ğŸ“‹ SUMMARY OF RESULTS');
  console.log('â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”');
  console.log('');
  console.log('1. REST API (8000):', results.restApi?.ok ? 'âœ… OK' : 'âŒ FAIL');
  console.log('2. Envoy Proxy (8080):', results.envoyProxy?.status === 503 ? 'âŒ 503 (Core unreachable)' : results.envoyProxy?.ok ? 'âœ… OK' : 'âŒ FAIL');
  console.log('3. gRPC Endpoint:', results.grpcEndpoint?.ok ? 'âœ… OK' : 'âŒ FAIL');
  console.log('4. Stream Connection:', results.streamConnection?.success ? `âœ… OK (${results.streamConnection.messageCount} msgs)` : 'âŒ FAIL');
  console.log('');
  console.log('â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”');
  
  return results;
}

// ĞĞ²Ñ‚Ğ¾Ğ·Ğ°Ğ³Ñ€ÑƒĞ·ĞºĞ°
console.log('âœ… Ğ”Ğ¸Ğ°Ğ³Ğ½Ğ¾ÑÑ‚Ğ¸Ñ‡ĞµÑĞºĞ¸Ğ¹ ÑĞºÑ€Ğ¸Ğ¿Ñ‚ Ğ·Ğ°Ğ³Ñ€ÑƒĞ¶ĞµĞ½!');
console.log('');
console.log('ğŸ“‹ Ğ˜Ğ¡ĞŸĞĞ›Ğ¬Ğ—ĞĞ’ĞĞĞ˜Ğ•:');
console.log('   diagnoseGrpc(userId, projectId)');
console.log('');
console.log('ğŸ“ ĞŸĞ Ğ˜ĞœĞ•Ğ :');
console.log('   diagnoseGrpc(9, 242)');
console.log('');
console.log('ğŸ’¡ TIP: Ğ§Ñ‚Ğ¾Ğ±Ñ‹ Ğ¿Ğ¾Ğ»ÑƒÑ‡Ğ¸Ñ‚ÑŒ user_id:');
console.log('   const user = JSON.parse(localStorage.getItem("user"));');
console.log('   console.log(user.id);');
console.log('');
