/**
 * Ð¢ÐµÑÑ‚Ð¾Ð²Ñ‹Ð¹ ÑÐºÑ€Ð¸Ð¿Ñ‚ Ð´Ð»Ñ Ð¿Ñ€Ð¾Ð²ÐµÑ€ÐºÐ¸ gRPC Ð¿Ð¾Ð´ÐºÐ»ÑŽÑ‡ÐµÐ½Ð¸Ñ Ð² ÐºÐ¾Ð½ÑÐ¾Ð»Ð¸ Ð±Ñ€Ð°ÑƒÐ·ÐµÑ€Ð°
 * 
 * Ð˜ÑÐ¿Ð¾Ð»ÑŒÐ·Ð¾Ð²Ð°Ð½Ð¸Ðµ:
 * 1. ÐžÑ‚ÐºÑ€Ð¾Ð¹Ñ‚Ðµ DevTools â†’ Console
 * 2. Ð¡ÐºÐ¾Ð¿Ð¸Ñ€ÑƒÐ¹Ñ‚Ðµ Ð¸ Ð²ÑÑ‚Ð°Ð²ÑŒÑ‚Ðµ Ð²ÐµÑÑŒ ÑÐºÑ€Ð¸Ð¿Ñ‚
 * 3. Ð—Ð°Ð¿ÑƒÑÑ‚Ð¸Ñ‚Ðµ: testGrpcConnection(9, 242)
 *    Ð³Ð´Ðµ 9 = user_id, 242 = project_id
 */

async function testGrpcConnection(userId, projectId) {
  console.log('ðŸš€ Ð¢ÐµÑÑ‚ gRPC Ð¿Ð¾Ð´ÐºÐ»ÑŽÑ‡ÐµÐ½Ð¸Ñ');
  console.log('ðŸ‘¤ User ID:', userId);
  console.log('ðŸ“‹ Project ID:', projectId);
  
  // ÐšÐ¾Ð´Ð¸Ñ€Ð¾Ð²Ð°Ð½Ð¸Ðµ varint
  function encodeVarint(value) {
    const bytes = [];
    while (value > 0x7f) {
      bytes.push((value & 0x7f) | 0x80);
      value >>>= 7;
    }
    bytes.push(value & 0x7f);
    return bytes;
  }
  
  // Ð¡Ð¾Ð·Ð´Ð°Ð½Ð¸Ðµ Protobuf Ð·Ð°Ð¿Ñ€Ð¾ÑÐ° AlgorithmRequest
  const requestBytes = [
    0x08, ...encodeVarint(userId),  // field 1: user_id
    0x10, ...encodeVarint(projectId) // field 2: task_id (project_id)
  ];
  
  console.log('ðŸ“¦ Request payload (hex):', requestBytes.map(b => '0x' + b.toString(16).padStart(2, '0')).join(', '));
  
  const requestBody = new Uint8Array(requestBytes);
  
  try {
    const response = await fetch('/grpc/core.api.FrontendStreamService/RunAlgorithm', {
      method: 'POST',
      headers: {
        'Content-Type': 'application/grpc-web+proto',
        'Accept': 'application/grpc-web+proto',
        'X-Grpc-Web': '1',
        'X-User-Agent': 'grpc-web-javascript/0.1',
      },
      body: requestBody
    });
    
    console.log('ðŸ“¥ Response status:', response.status);
    console.log('ðŸ“¥ Response headers:', Object.fromEntries(response.headers.entries()));
    
    if (!response.ok) {
      console.error('âŒ HTTP error:', response.status, response.statusText);
      return;
    }
    
    const reader = response.body.getReader();
    let buffer = new Uint8Array(0);
    let messageCount = 0;
    
    console.log('ðŸ“– Ð§Ð¸Ñ‚Ð°ÐµÐ¼ stream...\n');
    
    while (true) {
      const { done, value } = await reader.read();
      
      if (done) {
        console.log('âœ… Stream Ð·Ð°Ð²ÐµÑ€ÑˆÑ‘Ð½');
        break;
      }
      
      // Ð”Ð¾Ð±Ð°Ð²Ð»ÑÐµÐ¼ chunk Ðº Ð±ÑƒÑ„ÐµÑ€Ñƒ
      const newBuffer = new Uint8Array(buffer.length + value.length);
      newBuffer.set(buffer);
      newBuffer.set(value, buffer.length);
      buffer = newBuffer;
      
      // ÐŸÐ°Ñ€ÑÐ¸Ð¼ Ð²ÑÐµ Ð´Ð¾ÑÑ‚ÑƒÐ¿Ð½Ñ‹Ðµ ÑÐ¾Ð¾Ð±Ñ‰ÐµÐ½Ð¸Ñ
      while (buffer.length >= 5) {
        const compressedFlag = buffer[0];
        const messageLength = (buffer[1] << 24) | (buffer[2] << 16) | (buffer[3] << 8) | buffer[4];
        
        if (buffer.length < 5 + messageLength) {
          break; // Ð–Ð´Ñ‘Ð¼ Ð±Ð¾Ð»ÑŒÑˆÐµ Ð´Ð°Ð½Ð½Ñ‹Ñ…
        }
        
        const messageBytes = buffer.slice(5, 5 + messageLength);
        buffer = buffer.slice(5 + messageLength);
        
        messageCount++;
        
        console.log(`ðŸ“¬ Message #${messageCount}:`);
        console.log('  Length:', messageLength);
        console.log('  Hex:', Array.from(messageBytes.slice(0, Math.min(50, messageBytes.length)))
          .map(b => b.toString(16).padStart(2, '0')).join(' '));
        
        // ÐŸÑ€Ð¾ÑÑ‚Ð¾Ð¹ Ð¿Ð°Ñ€ÑÐ¸Ð½Ð³ Ð´Ð»Ñ Ð¾Ñ‚Ð¾Ð±Ñ€Ð°Ð¶ÐµÐ½Ð¸Ñ status
        if (messageBytes.length >= 2) {
          let pos = 0;
          while (pos < messageBytes.length && pos < 10) {
            const tag = messageBytes[pos++];
            const fieldNum = tag >>> 3;
            const wireType = tag & 0x07;
            
            if (fieldNum === 3 && wireType === 0) { // status field
              let statusValue = 0;
              let shift = 0;
              while (pos < messageBytes.length) {
                const byte = messageBytes[pos++];
                statusValue |= (byte & 0x7f) << shift;
                if ((byte & 0x80) === 0) break;
                shift += 7;
              }
              const statusNames = ['START', 'REQUIREMENTS', 'ENDPOINTS', 'ARHITECTURE', 'DONE'];
              console.log(`  Status: ${statusNames[statusValue] || statusValue}`);
              break;
            } else {
              // Skip field
              if (wireType === 0) { // varint
                while (pos < messageBytes.length && (messageBytes[pos++] & 0x80));
              } else if (wireType === 2) { // length-delimited
                let len = 0, shift = 0;
                while (pos < messageBytes.length) {
                  const byte = messageBytes[pos++];
                  len |= (byte & 0x7f) << shift;
                  if ((byte & 0x80) === 0) break;
                  shift += 7;
                }
                pos += len;
              }
            }
          }
        }
        console.log('');
      }
    }
    
    console.log(`\nâœ… ÐŸÐ¾Ð»ÑƒÑ‡ÐµÐ½Ð¾ ÑÐ¾Ð¾Ð±Ñ‰ÐµÐ½Ð¸Ð¹: ${messageCount}`);
    
  } catch (error) {
    console.error('âŒ ÐžÑˆÐ¸Ð±ÐºÐ°:', error);
  }
}

console.log('âœ… Ð¡ÐºÑ€Ð¸Ð¿Ñ‚ Ð·Ð°Ð³Ñ€ÑƒÐ¶ÐµÐ½! Ð˜ÑÐ¿Ð¾Ð»ÑŒÐ·ÑƒÐ¹Ñ‚Ðµ: testGrpcConnection(userId, projectId)');
console.log('ÐŸÑ€Ð¸Ð¼ÐµÑ€: testGrpcConnection(9, 242)');
