/**
 * gRPC Web Client –¥–ª—è –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ Core —Å–µ—Ä–≤–∏—Å—É —á–µ—Ä–µ–∑ Envoy
 * 
 * –í–ï–†–°–ò–Ø –° grpc-web –∏ —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–º–∏ –∫–ª–∞—Å—Å–∞–º–∏ –∏–∑ .proto
 * 
 * –ê–†–•–ò–¢–ï–ö–¢–£–†–ê:
 * ============
 * 1. –ò—Å–ø–æ–ª—å–∑—É–µ–º FrontendStreamServiceClient –∏–∑ —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã—Ö proto
 * 2. AlgorithmRequest –∏ GraphPartResponse –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –∫–æ–¥–∏—Ä—É—é—Ç—Å—è/–¥–µ–∫–æ–¥–∏—Ä—É—é—Ç—Å—è
 * 3. –í—Å—è —Ä–∞–±–æ—Ç–∞ —Å –±–∏–Ω–∞—Ä–Ω—ã–º–∏ –¥–∞–Ω–Ω—ã–º–∏ –¥–µ–ª–µ–≥–∏—Ä–æ–≤–∞–Ω–∞ grpc-web –±–∏–±–ª–∏–æ—Ç–µ–∫–µ
 * 
 * –¢–†–ï–ë–û–í–ê–ù–ò–Ø:
 * ===========
 * 1. npm install grpc-web google-protobuf
 * 2. –°–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–µ —Ñ–∞–π–ª—ã –≤ src/grpc/:
 *    - api_core_pb.js
 *    - api_core_grpc_web_pb.js  
 *    - shared_common_pb.js
 */

// –ò–º–ø–æ—Ä—Ç—ã –∏–∑ —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã—Ö —Ñ–∞–π–ª–æ–≤
// ‚ö†Ô∏è –í–ê–ñ–ù–û: –≠—Ç–∏ —Ñ–∞–π–ª—ã –¥–æ–ª–∂–Ω—ã –±—ã—Ç—å —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω—ã —Å –ø–æ–º–æ—â—å—é protoc!
// –ö–æ–º–∞–Ω–¥–∞ –≥–µ–Ω–µ—Ä–∞—Ü–∏–∏ –æ–ø–∏—Å–∞–Ω–∞ –≤ GRPC_WEB_SETUP.md
import { FrontendStreamServiceClient } from "../grpc/api_core_grpc_web_pb";
import { AlgorithmRequest } from "../grpc/api_core_pb";
import { ParseStatus } from "../grpc/shared_common_pb";

/**
 * –ö–ª–∞—Å—Å –¥–ª—è —Ä–∞–±–æ—Ç—ã —Å gRPC —Å—Ç—Ä–∏–º–æ–º –∞—Ä—Ö–∏—Ç–µ–∫—Ç—É—Ä—ã —á–µ—Ä–µ–∑ grpc-web
 */
class GRPCArchitectureClient {
  constructor(envoyUrl = null) {
    const envGrpcUrl = import.meta.env?.VITE_GRPC_URL;
    const isDev = import.meta.env?.DEV;
    const shouldUseProxy = isDev && (!envGrpcUrl || envGrpcUrl.includes("78.153.139.47"));

    if (shouldUseProxy) {
      this.envoyUrl = "/grpc";
    } else if (envGrpcUrl) {
      this.envoyUrl = envGrpcUrl;
    } else if (envoyUrl) {
      this.envoyUrl = envoyUrl;
    } else {
      this.envoyUrl = "http://78.153.139.47:8080";
    }

    console.log("[grpc-web] init", {
      envoyUrl: this.envoyUrl,
      envGrpcUrl,
      passedEnvoyUrl: envoyUrl,
      locationOrigin: typeof window !== "undefined" ? window.location.origin : "n/a",
      dev: isDev,
      shouldUseProxy,
    });
    
    if (shouldUseProxy) {
      console.log("[grpc-web] üîß DEV MODE: –∏—Å–ø–æ–ª—å–∑—É–µ–º proxy /grpc –¥–ª—è –∏–∑–±–µ–∂–∞–Ω–∏—è CORS");
    }
    
    if (typeof this.envoyUrl === "string" && this.envoyUrl.startsWith("/")) {
      console.log("[grpc-web] ‚úÖ –ò—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è –æ—Ç–Ω–æ—Å–∏—Ç–µ–ª—å–Ω—ã–π URL (proxy), CORS –ø—Ä–æ–±–ª–µ–º –Ω–µ –±—É–¥–µ—Ç");
    }

    // –°–æ–∑–¥–∞—ë–º grpc-web –∫–ª–∏–µ–Ω—Ç–∞
    this.client = new FrontendStreamServiceClient(this.envoyUrl, null, null);
  }

  /**
   * –ß–∏—Ç–∞–±–µ–ª—å–Ω–æ–µ –∏–º—è —Å—Ç–∞—Ç—É—Å–∞
   */
  getStatusName(status) {
    const names = {
      [ParseStatus.START]: "START",
      [ParseStatus.REQUIREMENTS]: "REQUIREMENTS",
      [ParseStatus.ENDPOINTS]: "ENDPOINTS",
      [ParseStatus.ARHITECTURE]: "ARHITECTURE",
      [ParseStatus.DONE]: "DONE",
    };
    return names[status] || `UNKNOWN(${status})`;
  }

  /**
   * –û—Å–Ω–æ–≤–Ω–æ–π –º–µ—Ç–æ–¥ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ —Å–µ—Ä–≤–µ—Ä–Ω–æ–º—É —Å—Ç—Ä–∏–º—É RunAlgorithm
   *
   * @param {number} userId      - ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
   * @param {number} taskId      - ID –∑–∞–¥–∞—á–∏ (project ID)
   * @param {object} callbacks   - { onStart, onRequirements, onEndpoints, onArchitecture, onDone, onError }
   * @param {number} delayMs     - –∑–∞–¥–µ—Ä–∂–∫–∞ –ø–µ—Ä–µ–¥ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ–º (–¥–ª—è —Ç–æ–ª—å–∫–æ —á—Ç–æ —Å–æ–∑–¥–∞–Ω–Ω—ã—Ö –ø—Ä–æ–µ–∫—Ç–æ–≤)
   * @returns {Promise<{abort: () => void}>} - –æ–±—ä–µ–∫—Ç —Å –º–µ—Ç–æ–¥–æ–º abort() –¥–ª—è –æ—Ç–º–µ–Ω—ã —Å—Ç—Ä–∏–º–∞
   */
  async connectToStream(userId, taskId, callbacks = {}, delayMs = 0) {
    if (delayMs > 0) {
      console.log(`‚è±Ô∏è –û–∂–∏–¥–∞–Ω–∏–µ ${delayMs}ms –ø–µ—Ä–µ–¥ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ–º –∫ gRPC (grpc-web)...`);
      await new Promise((resolve) => setTimeout(resolve, delayMs));
    }

    console.log(`üì° [grpc-web] –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ RunAlgorithm: user_id=${userId}, task_id=${taskId}`);

    const numericUserId = Number(userId);
    const numericTaskId = Number(taskId);

    if (!Number.isFinite(numericUserId) || !Number.isFinite(numericTaskId)) {
      const err = new Error("userId –∏ taskId –¥–æ–ª–∂–Ω—ã –±—ã—Ç—å —á–∏—Å–ª–∞–º–∏");
      console.error("[grpc-web] ‚ùå –ù–µ–∫–æ—Ä—Ä–µ–∫—Ç–Ω—ã–µ –ø–∞—Ä–∞–º–µ—Ç—Ä—ã:", { userId, taskId });
      callbacks.onError?.(err);
      throw err;
    }

    // –§–æ—Ä–º–∏—Ä—É–µ–º AlgorithmRequest —á–µ—Ä–µ–∑ —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–π –∫–ª–∞—Å—Å
    const request = new AlgorithmRequest();
    request.setUserId(numericUserId);
    request.setTaskId(numericTaskId);

    // –ï—Å–ª–∏ –∑–∞—Ö–æ—á–µ—à—å –≥–æ–Ω—è—Ç—å —Ç–æ–∫–µ–Ω –¥–æ Envoy:
    // const token = localStorage.getItem("access_token");
    // const metadata = token ? { Authorization: `Bearer ${token}` } : {};
    const metadata = {}; // —Å–µ–π—á–∞—Å Core –Ω–µ –∏—Å–ø–æ–ª—å–∑—É–µ—Ç JWT, –æ—Å—Ç–∞–≤–∏–º –ø—É—Å—Ç—ã–º

    const timeoutMs = Number(import.meta.env?.VITE_GRPC_TIMEOUT_MS ?? 60000);
    let receivedDone = false;
    let messageCount = 0;
    let timedOut = false;
    let timeoutId = null;

    console.log("[grpc-web] –°—Ç–∞—Ä—Ç —Å—Ç—Ä–∏–º–∞ runAlgorithm", {
      baseUrl: this.envoyUrl,
      timeoutMs,
    });

    // –ó–∞–ø—É—Å–∫–∞–µ–º —Å—Ç—Ä–∏–º —á–µ—Ä–µ–∑ grpc-web
    const stream = this.client.runAlgorithm(request, metadata);

    // –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º —Ç–∞–π–º–∞—É—Ç: –µ—Å–ª–∏ –¥–æ–ª–≥–æ –Ω–µ—Ç DONE ‚Äî –ø—Ä–µ—Ä—ã–≤–∞–µ–º
    if (timeoutMs > 0) {
      timeoutId = setTimeout(() => {
        timedOut = true;
        console.error("[grpc-web] ‚è∞ –¢–∞–π–º–∞—É—Ç –æ–∂–∏–¥–∞–Ω–∏—è DONE, –æ—Ç–º–µ–Ω—è–µ–º —Å—Ç—Ä–∏–º", {
          userId: numericUserId,
          taskId: numericTaskId,
          timeoutMs,
        });
        stream.cancel();
        const timeoutError = new Error("gRPC request timed out: DONE status not received");
        callbacks.onError?.(timeoutError);
      }, timeoutMs);
    }

    // –û–±—Ä–∞–±–æ—Ç–∫–∞ –≤—Ö–æ–¥—è—â–∏—Ö —Å–æ–æ–±—â–µ–Ω–∏–π
    stream.on("data", (resp) => {
      messageCount += 1;

      const status = resp.getStatus();
      const responseId = resp.getResponseId ? resp.getResponseId() : undefined;

      console.log(`üì¨ [grpc-web] msg #${messageCount}`, {
        status: this.getStatusName(status),
        responseId,
      });

      // –°–æ–±–∏—Ä–∞–µ–º "—É–Ω–∏—Ñ–∏—Ü–∏—Ä–æ–≤–∞–Ω–Ω—ã–π" –æ–±—ä–µ–∫—Ç —Å–æ–æ–±—â–µ–Ω–∏—è, –ø–æ—Ö–æ–∂–∏–π –Ω–∞ —Ç–æ, —á—Ç–æ –±—ã–ª–æ –≤ —Ä—É—á–Ω–æ–π –≤–µ—Ä—Å–∏–∏
      const msg = { status, response_id: responseId };

      switch (status) {
        case ParseStatus.START: {
          this._handleStreamMessage(msg, callbacks);
          break;
        }

        case ParseStatus.REQUIREMENTS: {
          const part = resp.getGraphRequirements();
          const total = part?.getTotal?.() ?? 0;
          const reqs = part?.getRequirementsList?.() ?? [];
          msg.requirements = reqs;
          msg.total_requirements = total;
          this._handleStreamMessage(msg, callbacks);
          break;
        }

        case ParseStatus.ENDPOINTS: {
          const part = resp.getGraphEndpoints();
          const total = part?.getTotal?.() ?? 0;
          let endpointsObj = {};

          // map<string,string> endpoints ‚Üí JS-–æ–±—ä–µ–∫—Ç
          const endpointsMap = part?.getEndpointsMap?.();
          if (endpointsMap && typeof endpointsMap.forEach === "function") {
            endpointsMap.forEach((value, key) => {
              endpointsObj[key] = value;
            });
          }

          msg.endpoints = endpointsObj;
          msg.total_endpoints = total;
          this._handleStreamMessage(msg, callbacks);
          break;
        }

        case ParseStatus.ARHITECTURE: {
          const part = resp.getGraphArchitecture();
          const parent = part?.getParent?.() ?? "";
          const children = part?.getChildrenList?.() ?? [];
          msg.parent = parent;
          msg.children = children;
          this._handleStreamMessage(msg, callbacks);
          break;
        }

        case ParseStatus.DONE: {
          receivedDone = true;
          console.log("‚úÖ [grpc-web] –ü–æ–ª—É—á–µ–Ω —Å—Ç–∞—Ç—É—Å DONE");
          this._handleStreamMessage(msg, callbacks);
          break;
        }

        default: {
          console.warn("[grpc-web] ‚ö†Ô∏è –ù–µ–∏–∑–≤–µ—Å—Ç–Ω—ã–π —Å—Ç–∞—Ç—É—Å:", status);
          this._handleStreamMessage(msg, callbacks);
        }
      }
    });

    // –û—à–∏–±–∫–∞ —Å—Ç—Ä–∏–º–∞
    stream.on("error", (err) => {
      if (timeoutId) clearTimeout(timeoutId);

      // –ï—Å–ª–∏ —ç—Ç–æ –º—ã —Å–∞–º–∏ –æ—Ç–º–µ–Ω–∏–ª–∏ –∏–∑-–∑–∞ —Ç–∞–π–º–∞—É—Ç–∞ ‚Äî –æ—à–∏–±–∫—É —É–∂–µ –ø—Ä–æ–∫–∏–Ω—É–ª–∏
      if (timedOut) {
        return;
      }

      console.error("‚ùå [grpc-web] –û—à–∏–±–∫–∞ —Å—Ç—Ä–∏–º–∞:", err);
      callbacks.onError?.(err);
    });

    // –ö–æ–Ω–µ—Ü —Å—Ç—Ä–∏–º–∞
    stream.on("end", () => {
      if (timeoutId) clearTimeout(timeoutId);

      console.log("[grpc-web] Stream –∑–∞–≤–µ—Ä—à—ë–Ω", {
        messageCount,
        receivedDone,
      });

      if (messageCount === 0) {
        const err = new Error(
          "Stream –∑–∞–≤–µ—Ä—à–∏–ª—Å—è –±–µ–∑ –¥–∞–Ω–Ω—ã—Ö. –í–æ–∑–º–æ–∂–Ω–æ, –ø—Ä–æ–µ–∫—Ç –Ω–µ –Ω–∞–π–¥–µ–Ω –∏–ª–∏ –ø—Ä–æ–∏–∑–æ—à–ª–∞ –æ—à–∏–±–∫–∞ –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ."
        );
        console.error("‚ùå [grpc-web] Stream –±–µ–∑ —Å–æ–æ–±—â–µ–Ω–∏–π");
        callbacks.onError?.(err);
        return;
      }

      if (!receivedDone) {
        const err = new Error(
          `Stream –ø—Ä–µ—Ä–≤–∞–Ω –ø—Ä–µ–∂–¥–µ–≤—Ä–µ–º–µ–Ω–Ω–æ.\n\n` +
            `–ü–æ–ª—É—á–µ–Ω–æ —Å–æ–æ–±—â–µ–Ω–∏–π: ${messageCount}\n` +
            `–°—Ç–∞—Ç—É—Å DONE –Ω–µ –ø–æ–ª—É—á–µ–Ω.\n\n` +
            `–í–æ–∑–º–æ–∂–Ω—ã–µ –ø—Ä–∏—á–∏–Ω—ã:\n` +
            `‚Ä¢ –û—à–∏–±–∫–∞ –≤ –∞–ª–≥–æ—Ä–∏—Ç–º–µ –∞–Ω–∞–ª–∏–∑–∞ –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ\n` +
            `‚Ä¢ –¢–∞–π–º–∞—É—Ç –æ–±—Ä–∞–±–æ—Ç–∫–∏\n` +
            `‚Ä¢ –ü—Ä–æ–±–ª–µ–º–∞ —Å —Ñ–∞–π–ª–æ–º –ø—Ä–æ–µ–∫—Ç–∞\n` +
            `‚Ä¢ –ù–µ–¥–æ—Å—Ç–∞—Ç–æ—á–Ω–æ –ø–∞–º—è—Ç–∏ –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ\n\n` +
            `–ü—Ä–æ–≤–µ—Ä—å—Ç–µ –ª–æ–≥–∏ Core gRPC —Å–µ—Ä–≤–∏—Å–∞`
        );
        console.error("‚ùå [grpc-web] Stream –∑–∞–≤–µ—Ä—à—ë–Ω –±–µ–∑ DONE");
        callbacks.onError?.(err);
        return;
      }

      console.log("‚úÖ [grpc-web] Stream –∑–∞–≤–µ—Ä—à—ë–Ω –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ");
      callbacks.onDone?.();
    });

    // –í–æ–∑–≤—Ä–∞—â–∞–µ–º –æ–±—ä–µ–∫—Ç —Å abort(), —á—Ç–æ–±—ã –≤–Ω–µ—à–Ω–∏–π –∫–æ–¥ –º–æ–≥ –æ—Ç–º–µ–Ω–∏—Ç—å —Å—Ç—Ä–∏–º
    const controllerLike = {
      abort: () => {
        console.log("üõë [grpc-web] –ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–∞—è –æ—Ç–º–µ–Ω–∞ —Å—Ç—Ä–∏–º–∞");
        if (timeoutId) clearTimeout(timeoutId);
        stream.cancel();
      },
    };

    return controllerLike;
  }

  /**
   * –û–±—Ä–∞–±–æ—Ç–∫–∞ –æ–¥–Ω–æ–≥–æ —Å–æ–æ–±—â–µ–Ω–∏—è –∏–∑ stream (–∏–Ω—Ç–µ—Ä—Ñ–µ–π—Å –∫–∞–∫ —Ä–∞–Ω—å—à–µ)
   * @private
   */
  _handleStreamMessage(message, callbacks) {
    const { status, response_id, requirements, endpoints, parent, children } = message;

    console.log(
      `üì® [grpc-web] –û–±—Ä–∞–±–æ—Ç–∫–∞: status=${this.getStatusName(status)}, response_id=${response_id}`
    );

    switch (status) {
      case ParseStatus.START:
        console.log("üé¨ START - –∞–Ω–∞–ª–∏–∑ –Ω–∞—á–∞–ª—Å—è");
        callbacks.onStart?.();
        break;

      case ParseStatus.REQUIREMENTS:
        console.log(
          `üìã REQUIREMENTS - –ø–æ–ª—É—á–µ–Ω–æ ${requirements?.length ?? 0} –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–µ–π`
        );
        callbacks.onRequirements?.({
          requirements: requirements || [],
        });
        break;

      case ParseStatus.ENDPOINTS:
        console.log(
          `üîó ENDPOINTS - –ø–æ–ª—É—á–µ–Ω–æ ${endpoints ? Object.keys(endpoints).length : 0} —ç–Ω–¥–ø–æ–∏–Ω—Ç–æ–≤`
        );
        callbacks.onEndpoints?.({
          endpoints: endpoints || {},
        });
        break;

      case ParseStatus.ARHITECTURE:
        console.log(
          `üèóÔ∏è ARHITECTURE - —É–∑–µ–ª ${parent} —Å ${children?.length ?? 0} –¥–µ—Ç—å–º–∏`
        );
        callbacks.onArchitecture?.({
          parent,
          children: children || [],
        });
        break;

      case ParseStatus.DONE:
        console.log("‚úÖ DONE - –∞–Ω–∞–ª–∏–∑ –∑–∞–≤–µ—Ä—à—ë–Ω (—Ñ–∏–Ω–∞–ª—å–Ω–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ –≤ stream.on('end'))");
        break;

      default:
        console.warn("‚ö†Ô∏è –ù–µ–∏–∑–≤–µ—Å—Ç–Ω—ã–π —Å—Ç–∞—Ç—É—Å:", status);
    }
  }
}

// Singleton, –∫–∞–∫ –±—ã–ª–æ —Ä–∞–Ω—å—à–µ
const grpcClient = new GRPCArchitectureClient();

export { GRPCArchitectureClient, grpcClient, ParseStatus };
export default grpcClient;
